ingress/client.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client
  namespace: ingress-canary
spec:
  replicas: 1
  selector:
    matchLabels:
      app: client
  template:
    metadata:
      labels:
        app: client
    spec:
      containers:
      - name: client
        image: giantswarm/tiny-tools:3.9
        imagePullPolicy: IfNotPresent
        command:
        - "sleep"
        - "infinity"
